--- a/base.css
+++ b/base.css
@@ -149,16 +149,16 @@ body.dark {
     .expanded {
         flex-basis: 15%;
     }
-    
-    #menu-Icon {
+
+    #menu-icon {
         transition: transform 0.2s ease;
         cursor: pointer;
     }
-    
-    .rotate-Icon {
+
+    .rotate-icon {
         transform: rotate(90deg);
     }
-    
+
     .Record-Name {
         display: none;
         flex: 1 1 auto;
@@ -168,14 +168,14 @@ body.dark {
         line-height: 20px;
         transition: width 0.3s ease;
     }
-    
+
     .Record-Name > div {
         display: flex;
         justify-content: flex-start;
         align-items: center;
         width: 100%;
     }
-    
+
     .Display-Record-Name {
         display: block;
         width: 100%;
@@ -208,19 +208,25 @@ body.dark {
         transition: opacity 0.2s ease, visibility 0.2s ease;
         z-index: 10;
     }
-    
+
     .SideBar-Switcher:hover::after {
         opacity: 1;
         visibility: visible;
     }
-    
+
+    .Switch-Link.active {
+        background-color: rgba(218, 218, 218, 0.725);
+        border-radius: 0.25em;
+        transition: background-color 0.3s ease;
+    }
+
     .App {
         height: 100%;
         flex: 1 1 auto;
         display: flex;
         flex-direction: column;
     }
-    
+
     header {
         width: 100%;
         height: 36px;
@@ -229,7 +235,7 @@ body.dark {
         align-items: center;
         z-index: 100;
     }
-    
+
     main {
         flex: 1;
     }
